--- a/MaFa/View/Base.lproj/Main.storyboard
+++ b/MaFa/View/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                             <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GF3-3Z-eik">
-                                <rect key="frame" x="0.0" y="767" width="393" height="85"/>
+                                <rect key="frame" x="0.0" y="766.66666666666663" width="393" height="85.333333333333371"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <items>
                                     <tabBarItem title="To Do" selectedImage="timer.circle.fill" catalog="system" id="SfR-dj-xSN">
@@ -110,18 +110,18 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iv5-X9-4D9">
                                                 <rect key="frame" x="15" y="45" width="333" height="39.666666666666657"/>
                                                 <subviews>
-                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="type your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gN4-1e-0jt">
+                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="type your name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gN4-1e-0jt">
                                                         <rect key="frame" x="0.0" y="0.0" width="158.66666666666666" height="39.666666666666664"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <textInputTraits key="textInputTraits" textContentType="name"/>
                                                     </textField>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z12-xF-wEm">
-                                                        <rect key="frame" x="158.66666666666666" y="0.0" width="15.666666666666657" height="39.666666666666664"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z12-xF-wEm">
+                                                        <rect key="frame" x="158.66666666666669" y="0.0" width="15.666666666666657" height="39.666666666666664"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" systemColor="systemGray2Color"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lhp-IP-xyQ">
+                                                    <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lhp-IP-xyQ">
                                                         <rect key="frame" x="174.33333333333337" y="-20" width="158.66666666666663" height="79.666666666666671"/>
                                                     </pickerView>
                                                 </subviews>
@@ -231,9 +231,8 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nPM-pg-qqX">
                                         <rect key="frame" x="15" y="64.333333333333314" width="333" height="234"/>
                                         <color key="backgroundColor" red="0.95686274509803915" green="0.95686274509803915" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                 </subviews>
@@ -253,6 +252,9 @@
                                 <rect key="frame" x="19.666666666666657" y="751.33333333333337" width="353.66666666666674" height="59.666666666666629"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="Save"/>
+                                <connections>
+                                    <action selector="saveTaskPressed:" destination="gkS-5G-a7Q" eventType="touchUpInside" id="EEG-UA-e0S"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="or7-A7-7Kh"/>
@@ -272,13 +274,12 @@
                             <constraint firstItem="or7-A7-7Kh" firstAttribute="bottom" secondItem="lVf-1U-hcF" secondAttribute="bottom" constant="7" id="rvi-jo-PKh"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="k38-wz-cGX">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="mod-g8-SxJ"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="k38-wz-cGX"/>
                     <connections>
                         <outlet property="bottomView" destination="Tha-HZ-1GY" id="N3U-bu-VV7"/>
+                        <outlet property="categoryLabel" destination="gN4-1e-0jt" id="FWC-tG-VZn"/>
                         <outlet property="categoryPicker" destination="Lhp-IP-xyQ" id="b8U-ig-2js"/>
-                        <outlet property="descritionTextView" destination="nPM-pg-qqX" id="EIC-W6-O3x"/>
+                        <outlet property="descriptionTextView" destination="nPM-pg-qqX" id="Cwd-dQ-FHs"/>
                         <outlet property="importancePicker" destination="6HC-4r-mUh" id="T5Y-pS-cnB"/>
                         <outlet property="importanceView" destination="vyx-6q-aFb" id="ZXj-HN-8JD"/>
                         <outlet property="stackView" destination="Z1p-Gj-l5b" id="PX9-Kr-h83"/>
